# uspto-revisit

./: .env.example  .gitattributes  .gitignore  Analysis_0206.ipynb  Analysis_0213.ipynb  Analysis_0216.ipynb  GPT12.ipynb  GPT_response_final_result_0216.csv  PromptEngineering.ipynb  PromptEngineering_0217.ipynb  PromptEngineering_0402.ipynb  README.md  Zhang_et_al_Llama3_8B_result.csv  chemspider_utils.py  compare_0206.csv  file_io_utils.py  gemini.ipynb  get_smiles.ipynb  input.csv  json_name_fix_utils.py  main.ipynb  main.py  pyproject.toml  reaction_smiles_processing_utils.py  reaction_step_processing_utils.py  requirements.txt  smiles_fetch_utils.py
data/: GPT_input.csv  GPT_reaction_smiles.csv  GPT_response.csv  GPT_response_with_smiles.csv  prompts_five_shot.json
examples/examples_used_for_finetuning/: samples_for_finetuning_final.jsonl
prompts/: prompt.txt
result/: GPT_reaction_smiles.csv  GPT_response_with_smiles.csv  gpt-4.1-mini_output.csv  gpt-4.1-mini_reaction_smiles.csv
result/smiles_batches/: smiles_cache.pkl  smiles_dict_batch_1.json  smiles_dict_batch_2.json  smiles_dict_batch_3.json  smiles_dict_final.json  smiles_dict_initial.json
smiles_batches/: smiles_dict_batch_1.json  smiles_dict_batch_2.json  smiles_dict_batch_3.json  smiles_dict_batch_4.json  smiles_dict_batch_5.json  smiles_dict_final_updated_ver2.json  smiles_dict_final_updated_ver2.json.json
src/: generate_reaction_smiles.ipynb  get_smiles.ipynb  get_smiles_batch.ipynb
src/uspto_revisit/: __init__.py  __main__.py  chemspider.py  cli.py  (+6 more)
tests/: test_reaction_smiles.py
