[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uspto-revisit"
version = "0.1.0"
description = "Utilities for reaction-step parsing and chemical-name to SMILES resolution."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.5",
    "ChemSpiPy>=2.0.0",
    "nest_asyncio>=1.6.0",
    "openai>=1.0.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.66.4",
]

[project.optional-dependencies]
dev = [
    "openpyxl>=3.1",
    "pytest>=8.0",
]

[project.scripts]
uspto-revisit = "uspto_revisit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
